--- a/map.html
+++ b/map.html
@@ -14,12 +14,12 @@
 <body>
     <div id="map"></div>
     <script>
-        mapboxgl.accessToken = 'pk.eyJ1IjoiZXh0YXN5MTIzIiwiYSI6ImNsdHRrYXEwaDB0bmQya3BlZzUzNWNucWQifQ.i-4dUpV8L9VDTd1bsJYIFw';
+        mapboxgl.accessToken = process.env.MAPBOXURI;
         const map = new mapboxgl.Map({
             container: 'map',
             style: 'mapbox://styles/mapbox/streets-v12',
-            center: [-73.949775, 40.820287], // Center the map around the general area of interest
-            zoom: 14 // Zoom level adjusted for better visualization
+            center: [-73.949775, 40.820287], // Center the map around the general area of ccny
+            zoom: 14 
         });
 
         map.on('load', () => {
@@ -30,14 +30,14 @@
                 'type': 'symbol',
                 'source': 'gps',
                 'layout': { 
-			        'icon-image': 'bus-15', // Assuming 'bus-15' is a valid icon in Mapbox, change as necessary
+			        'icon-image': 'bus-15',
 			        'icon-size' : 1.5 
 			    }
             });
 
-            // Function to update bus location
+            // Function to update map centering around bus location
             function updateBusLocation() {
-                fetch('/api/bus-info') // Adjust this URL to your actual API endpoint
+                fetch('/api/bus-info') // Adjust to actual API endpoint
                     .then(response => response.json())
                     .then(data => {
                         const coordinates = [data.nextStopCoords[0], data.nextStopCoords[1]];
